<resources>
    <string name="app_name">DeveemLabs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="dashboard">dashboard</string>
    <string name="notification">Notification</string>
    <string name="comments">comments</string>
    <string name="friends">friends</string>
    <string name="location">Локация</string>
    <string name="item">Вещь</string>
    <string name="quantity">5 кг</string>
    <string name="kgz">KGZ</string>
    <string name="prise_size">200</string>
    <string name="price">Цена</string>
</resources>