<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_star"

        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_vector_pluse"
        android:title="@string/notification" />
    <item
        android:id="@+id/navigation_comments"
        android:icon="@drawable/ic_vector_comments"
        android:title="@string/comments" />
    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_vector_friends"
        android:title="@string/friends" />
</menu>