<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/items_image_view"
            android:layout_width="165dp"
            android:layout_height="170dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#4D000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/items_image_view" />

        <TextView
            android:id="@+id/price_size"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/prise_size"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/kgz"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/price_size"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="50dp"
            android:layout_height="18dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="#4D000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/item_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:hint="@string/item"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_size" />


        <TextView
            android:id="@+id/location_tv"
            android:drawablePadding="7dp"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_location"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/location"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_title_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>